--- a/SATEMapp/app/src/main/res/values/strings.xml
+++ b/SATEMapp/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="riesgo">Riesgo:</string>
     <string name="enviar">Enviar</string>
     <string name="NTU">No tiene urgencias Registradas en el Sistema.</string>
-    <string name="usuario">Usuario</string>
+    <string name="usuario">E-Mail</string>
     <string name="password">Contraseña</string>
     <string name="numAmb">Número de Ambulancia</string>
     <string name="login">Iniciar Sesión</string>
