SATEM APP - Send Emergency - 2

--- a/SATEMapp/app/src/main/res/values/strings.xml
+++ b/SATEMapp/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     </string-array>
 
     <string name="logout">Cerrar Sesión</string>
-
+    <string name="lugar">Lugar del Accidente</string>
 
 
 </resources>
