--- a/SATEMapp/app/src/main/res/values/strings.xml
+++ b/SATEMapp/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_settings">Settings</string>
 
-   <string name="General">General</string>
+    <string name="General">General</string>
 
     <string name="pref_header_general">Menú de Opciones</string>
 
@@ -72,6 +72,7 @@
     <string name="emergenciaActual">Emergencia Actual:</string>
     <string name="suceso">Suceso</string>
     <string name="action_profle">Mi Perfil</string>
+    <string name="updateLabel">Actualizar Diagnóstico</string>
 
 
 </resources>
