SATEM APP - PROFILE 1

--- a/SATEMapp/app/src/main/res/values/strings.xml
+++ b/SATEMapp/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="suceso">Suceso</string>
     <string name="action_profle">Mi Perfil</string>
     <string name="updateLabel">Actualizar Diagnóstico</string>
+    <string name="title_activity_profile">profileActivity</string>
+    <string name="large_text">Profile</string>
 
 
 </resources>
